# autodiff

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
auto_diff/: auto_diff.h  evaluator.h
auto_diff/forward/: dual.h
auto_diff/reverse/: allocator.h  node.h  node_expr_template.h  node_variant.h  node_virtual.h
auto_diff/utility/: intrusive_ptr.h
tests/: CMakeLists.txt  main.cpp  test_1D_scalar_function.cpp  test_1D_scalar_function_optimization.cpp  test_2D_scalar_function.cpp  test_2D_scalar_function_optimization.cpp  test_nD_scalar_function.cpp  test_nD_scalar_function_optimization.cpp
